--- a/inde.html
+++ b/inde.html
@@ -64,3 +64,68 @@
 
         </div>
     </nav>
+
+    <!-- HERO -->
+    <section class="hero d-flex flex-column justify-content-center align-items-center" id="home">
+
+        <div class="bg-overlay"></div>
+
+           <div class="container">
+                <div class="row">
+
+                     <div class="col-lg-8 col-md-10 mx-auto col-12">
+                          <div class="hero-text mt-5 text-center">
+
+                                <h6 data-aos="fade-up" data-aos-delay="300">Come Back Stronger.</h6>
+
+                                <h1 class="text-white" data-aos="fade-up" data-aos-delay="500">PROGRESS STARTS WHEN EXCUSES STOP</h1>
+
+                                <a href="#feature" class="btn custom-btn mt-3" data-aos="fade-up" data-aos-delay="600">Get started</a>
+
+                                <a href="#about" class="btn custom-btn bordered mt-3" data-aos="fade-up" data-aos-delay="700">learn more</a>
+                               
+                          </div>
+                     </div>
+
+                </div>
+           </div>
+ </section>
+
+
+ <section class="feature" id="feature">
+    <div class="container">
+        <div class="row">
+
+            <div class="d-flex flex-column justify-content-center ml-lg-auto mr-lg-5 col-lg-5 col-md-6 col-12">
+                <h2 class="mb-3 text-white" data-aos="fade-up">TRY US FREE FOR 7 DAYS</h2>
+
+                <h6 class="mb-4 text-white" data-aos="fade-up">Membership plans start from $10.99</h6>
+
+                <p data-aos="fade-up" data-aos-delay="200">No Enrollment Fee + 2 FREE FitStart Sessions + 2 Monthly Guest Passes + FFC On Demand Included FREE!</p>
+
+                <a href="#" class="btn custom-btn bg-color mt-3" data-aos="fade-up" data-aos-delay="300" data-toggle="modal" data-target="#membershipForm">Become a member today</a>
+            </div>
+
+            <div class="mr-lg-auto mt-3 col-lg-4 col-md-6 col-12">
+                 <div class="about-working-hours">
+                      <div>
+
+                            <h2 class="mb-4 text-white" data-aos="fade-up" data-aos-delay="500">Working hours</h2>
+
+                           <strong class="d-block" data-aos="fade-up" data-aos-delay="600">Sunday : Closed</strong>
+
+                           <strong class="mt-3 d-block" data-aos="fade-up" data-aos-delay="700">Monday - Friday</strong>
+
+                            <p data-aos="fade-up" data-aos-delay="800">7:00 AM - 11:00 PM</p>
+
+                            <strong class="mt-3 d-block" data-aos="fade-up" data-aos-delay="700">Saturday</strong>
+
+                            <p data-aos="fade-up" data-aos-delay="800">7:00 AM - 6:00 PM</p>
+                           </div>
+                      </div>
+                 </div>
+            </div>
+
+        </div>
+    </div>
+</section>
