--- a/inde.html
+++ b/inde.html
@@ -1,34 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 
-     <title>FitSalon - Train your body top-notch</title>
+    <title>FitSalon - Train your body top-notch</title>
 
-     <meta charset="UTF-8">
-     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-     <meta name="description" content="">
-     <meta name="keywords" content="">
-     <meta name="author" content="">
-     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge">
+    <meta name="description" content="">
+    <meta name="keywords" content="">
+    <meta name="author" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-     <link rel="stylesheet" href="css/bootstrap.min.css">
-     <link rel="stylesheet" href="css/font-awesome.min.css">
-     <link rel="stylesheet" href="css/aos.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/aos.css">
 
-     <!-- MAIN CSS -->
-     <link rel="stylesheet" href="css/style.css">
-     
+    <!-- MAIN CSS -->
+    <link rel="stylesheet" href="css/style.css">
+
 </head>
+
 <body data-spy="scroll" data-target="#navbarNav" data-offset="50">
 
     <!-- MENU BAR -->
     <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container">
 
-            <a class="navbar-brand" href="index.html"><i class="fas fa-dumbbell"></i> <span class="logo-primary">Fit</span>Salon</a>
+            <a class="navbar-brand" href="index.html"><i class="fas fa-dumbbell"></i> <span
+                    class="logo-primary">Fit</span>Salon</a>
 
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
-                aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
@@ -70,62 +73,72 @@
 
         <div class="bg-overlay"></div>
 
-           <div class="container">
-                <div class="row">
+        <div class="container">
+            <div class="row">
 
-                     <div class="col-lg-8 col-md-10 mx-auto col-12">
-                          <div class="hero-text mt-5 text-center">
+                <div class="col-lg-8 col-md-10 mx-auto col-12">
+                    <div class="hero-text mt-5 text-center">
 
-                                <h6 data-aos="fade-up" data-aos-delay="300">Come Back Stronger.</h6>
+                        <h6 data-aos="fade-up" data-aos-delay="300">Come Back Stronger.</h6>
 
-                                <h1 class="text-white" data-aos="fade-up" data-aos-delay="500">PROGRESS STARTS WHEN EXCUSES STOP</h1>
+                        <h1 class="text-white" data-aos="fade-up" data-aos-delay="500">PROGRESS STARTS WHEN EXCUSES STOP
+                        </h1>
 
-                                <a href="#feature" class="btn custom-btn mt-3" data-aos="fade-up" data-aos-delay="600">Get started</a>
+                        <a href="#feature" class="btn custom-btn mt-3" data-aos="fade-up" data-aos-delay="600">Get
+                            started</a>
 
-                                <a href="#about" class="btn custom-btn bordered mt-3" data-aos="fade-up" data-aos-delay="700">learn more</a>
-                               
+                        <a href="#about" class="btn custom-btn bordered mt-3" data-aos="fade-up"
+                            data-aos-delay="700">learn more</a>
+
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
+
+<!-- =========== Features =============== -->
+
+    <section class="feature" id="feature">
+        <div class="container">
+            <div class="row">
+
+                <div class="d-flex flex-column justify-content-center ml-lg-auto mr-lg-5 col-lg-5 col-md-6 col-12">
+                    <h2 class="mb-3 text-white" data-aos="fade-up">TRY US FREE FOR 7 DAYS</h2>
+
+                    <h6 class="mb-4 text-white" data-aos="fade-up">Membership plans start from $10.99</h6>
+
+                    <p data-aos="fade-up" data-aos-delay="200">No Enrollment Fee + 2 FREE FitStart Sessions + 2 Monthly Guest Passes + FFC On Demand Included FREE!</p>
+
+                    <a href="#" class="btn custom-btn bg-color mt-3" data-aos="fade-up" data-aos-delay="300" data-toggle="modal" data-target="#membershipForm">Become a member today</a>
+                </div>
+
+                <div class="mr-lg-auto mt-3 col-lg-4 col-md-6 col-12">
+                     <div class="about-working-hours">
+                          <div>
+
+                                <h2 class="mb-4 text-white" data-aos="fade-up" data-aos-delay="500">Working hours</h2>
+
+                               <strong class="d-block" data-aos="fade-up" data-aos-delay="600">Sunday : Closed</strong>
+
+                               <strong class="mt-3 d-block" data-aos="fade-up" data-aos-delay="700">Monday - Friday</strong>
+
+                                <p data-aos="fade-up" data-aos-delay="800">7:00 AM - 10:00 PM</p>
+
+                                <strong class="mt-3 d-block" data-aos="fade-up" data-aos-delay="700">Saturday</strong>
+
+                                <p data-aos="fade-up" data-aos-delay="800">6:00 AM - 4:00 PM</p>
                           </div>
                      </div>
-
                 </div>
-           </div>
- </section>
-
-
- <section class="feature" id="feature">
-    <div class="container">
-        <div class="row">
-
-            <div class="d-flex flex-column justify-content-center ml-lg-auto mr-lg-5 col-lg-5 col-md-6 col-12">
-                <h2 class="mb-3 text-white" data-aos="fade-up">TRY US FREE FOR 7 DAYS</h2>
-
-                <h6 class="mb-4 text-white" data-aos="fade-up">Membership plans start from $10.99</h6>
-
-                <p data-aos="fade-up" data-aos-delay="200">No Enrollment Fee + 2 FREE FitStart Sessions + 2 Monthly Guest Passes + FFC On Demand Included FREE!</p>
-
-                <a href="#" class="btn custom-btn bg-color mt-3" data-aos="fade-up" data-aos-delay="300" data-toggle="modal" data-target="#membershipForm">Become a member today</a>
             </div>
-
-            <div class="mr-lg-auto mt-3 col-lg-4 col-md-6 col-12">
-                 <div class="about-working-hours">
-                      <div>
-
-                            <h2 class="mb-4 text-white" data-aos="fade-up" data-aos-delay="500">Working hours</h2>
-
-                           <strong class="d-block" data-aos="fade-up" data-aos-delay="600">Sunday : Closed</strong>
-
-                           <strong class="mt-3 d-block" data-aos="fade-up" data-aos-delay="700">Monday - Friday</strong>
-
-                            <p data-aos="fade-up" data-aos-delay="800">7:00 AM - 11:00 PM</p>
-
-                            <strong class="mt-3 d-block" data-aos="fade-up" data-aos-delay="700">Saturday</strong>
-
-                            <p data-aos="fade-up" data-aos-delay="800">7:00 AM - 6:00 PM</p>
-                           </div>
-                      </div>
-                 </div>
-            </div>
-
         </div>
-    </div>
-</section>
+    </section>
+
+    <!-- SCRIPTS -->
+
+    <script src="js/jquery.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/aos.js"></script>
+    <script src="js/smoothscroll.js"></script>
+</body>
