added classes section

--- a/inde.html
+++ b/inde.html
@@ -23,7 +23,7 @@
 
 <body data-spy="scroll" data-target="#navbarNav" data-offset="50">
 
-    <!-- MENU BAR -->
+<!-- MENU BAR -->
     <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container">
 
@@ -68,7 +68,7 @@
         </div>
     </nav>
 
-    <!-- HERO -->
+<!-- HERO -->
     <section class="hero d-flex flex-column justify-content-center align-items-center" id="home">
 
         <div class="bg-overlay"></div>
@@ -97,8 +97,7 @@
         </div>
     </section>
 
-<!-- =========== Features =============== -->
-
+<!-- Features -->
     <section class="feature" id="feature">
         <div class="container">
             <div class="row">
@@ -135,8 +134,122 @@
         </div>
     </section>
 
-    <!-- SCRIPTS -->
+<!-- ABOUT -->
+    <section class="about section" id="about">
+        <div class="container">
+             <div class="row">
 
+                     <div class="mt-lg-5 mb-lg-0 mb-4 col-lg-5 col-md-10 mx-auto col-12">
+                         <h2 class="mb-4" data-aos="fade-up" data-aos-delay="300">Welcome, we are FitSalon</h2>
+
+                         <p data-aos="fade-up" data-aos-delay="200">Sure, you want access to the best training equipment around and plenty of classes taught by first-rate instructors. But there’s more to reaching your goals than getting fit. You want to look good, feel good and enjoy your experience.</p>
+
+                         <p data-aos="fade-up" data-aos-delay="200">Get to know our experienced instructors</p>
+
+                     </div>
+
+                     <div class="ml-lg-auto col-lg-3 col-md-6 col-12" data-aos="fade-up" data-aos-delay="700">
+                         <div class="team-thumb">
+                             <img src="images/team/team-image.jpg" class="img-fluid" alt="Trainer">
+
+                             <div class="team-info d-flex flex-column">
+
+                                 <h3>Chuck Porris</h3>
+                                 <span>Yoga Instructor</span>
+
+                                 <ul class="social-icon mt-3">
+                                     <li><a href="#" class="fa fa-twitter"></a></li>
+                                     <li><a href="#" class="fa fa-instagram"></a></li>
+                                 </ul>
+                             </div>
+                         </div>
+                     </div>
+
+                     <div class="mr-lg-auto mt-5 mt-lg-0 mt-md-0 col-lg-3 col-md-6 col-12" data-aos="fade-up" data-aos-delay="800">
+                         <div class="team-thumb">
+                             <img src="images/team/team-image01.jpg" class="img-fluid" alt="Trainer">
+
+                             <div class="team-info d-flex flex-column">
+
+                                 <h3>Jacky Yan</h3>
+                                 <span>Body trainer</span>
+
+                                 <ul class="social-icon mt-3">
+                                     <li><a href="#" class="fa fa-instagram"></a></li>
+                                     <li><a href="#" class="fa fa-facebook"></a></li>
+                                 </ul>
+                             </div>
+                         </div>
+                     </div>
+
+             </div>
+        </div>
+    </section>
+
+<!-- CLASS -->
+    <section class="class section" id="class">
+        <div class="container">
+             <div class="row">
+
+                     <div class="col-lg-12 col-12 text-center mb-5">
+                         <h6 data-aos="fade-up">Upgrade your body</h6>
+
+                         <h2 data-aos="fade-up" data-aos-delay="200">Training Classes Offered:</h2>
+                      </div>
+
+                     <div class="col-lg-4 col-md-6 col-12" data-aos="fade-up" data-aos-delay="50">
+                         <div class="class-thumb">
+                             <img src="images/class/yoga-class.jpg" class="img-fluid" alt="Class">
+
+                             <div class="class-info">
+                                 <h3 class="mb-1">Yoga</h3>
+
+                                 <span><strong>Trained by</strong> - Gandi</span>
+
+                                 <span class="class-price">$99</span>
+
+                                 <p class="mt-3">Lorem ipsum dolor sit amet, consectetur adipiscing</p>
+                             </div>
+                         </div>
+                     </div>
+
+                     <div class="mt-5 mt-lg-0 mt-md-0 col-lg-4 col-md-6 col-12" data-aos="fade-up" data-aos-delay="250">
+                         <div class="class-thumb">
+                             <img src="images/class/crossfit-class.jpg" class="img-fluid" alt="Class">
+
+                             <div class="class-info">
+                                 <h3 class="mb-1">Areobic</h3>
+
+                                 <span><strong>Trained by</strong> - Chuck</span>
+
+                                 <span class="class-price">$75</span>
+
+                                 <p class="mt-3">Lorem ipsum dolor sit amet, consectetur adipiscing</p>
+                             </div>
+                         </div>
+                     </div>
+
+                     <div class="mt-5 mt-lg-0 col-lg-4 col-md-6 col-12" data-aos="fade-up" data-aos-delay="350">
+                         <div class="class-thumb">
+                             <img src="images/class/cardio-class.jpg" class="img-fluid" alt="Class">
+
+                             <div class="class-info">
+                                 <h3 class="mb-1">Cardio</h3>
+
+                                 <span><strong>Trained by</strong> - Jacky</span>
+
+                                 <span class="class-price">$75</span>
+
+                                 <p class="mt-3">Lorem ipsum dolor sit amet, consectetur adipiscing</p>
+                             </div>
+                         </div>
+                     </div>
+
+             </div>
+        </div>
+    </section>
+
+<!-- SCRIPTS -->
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/aos.js"></script>
