--- a/inde.html
+++ b/inde.html
@@ -153,7 +153,7 @@
 
                 </div>
 
-                <div class="ml-lg-auto col-lg-3 col-md-6 col-12" data-aos="fade-up" data-aos-delay="700">
+                <div class="ml-lg-auto col-lg-3 col-md-6 col-12" data-aos="fade-up" data-aos-delay="700" data-tilt>
                     <div class="team-thumb">
                         <img src="images/team/team-image.jpg" class="img-fluid" alt="Trainer">
 
@@ -170,8 +170,7 @@
                     </div>
                 </div>
 
-                <div class="mr-lg-auto mt-5 mt-lg-0 mt-md-0 col-lg-3 col-md-6 col-12" data-aos="fade-up"
-                    data-aos-delay="800">
+                <div class="mr-lg-auto mt-5 mt-lg-0 mt-md-0 col-lg-3 col-md-6 col-12" data-aos="fade-up" data-aos-delay="800" data-tilt>
                     <div class="team-thumb">
                         <img src="images/team/team-image01.jpg" class="img-fluid" alt="Trainer">
 
@@ -478,5 +477,6 @@
     <script src="js/aos.js"></script>
     <script src="js/smoothscroll.js"></script>
     <script src="js/custom.js"></script>
+    <script type="text/javascript" src="js/vanilla-tilt.js"></script>
 
 </body>
