--- a/inde.html
+++ b/inde.html
@@ -202,7 +202,7 @@
                     <h2 data-aos="fade-up" data-aos-delay="200">Training Classes Offered:</h2>
                 </div>
 
-                <div class="col-lg-4 col-md-6 col-12" data-aos="fade-up" data-aos-delay="50">
+                <div class="col-lg-4 col-md-6 col-12" data-aos="fade-up" data-aos-delay="50" data-tilt data-tilt-scale="1.1">
                     <div class="class-thumb">
                         <img src="images/class/yoga-class.jpg" class="img-fluid" alt="Class">
 
@@ -218,7 +218,7 @@
                     </div>
                 </div>
 
-                <div class="mt-5 mt-lg-0 mt-md-0 col-lg-4 col-md-6 col-12" data-aos="fade-up" data-aos-delay="250">
+                <div class="mt-5 mt-lg-0 mt-md-0 col-lg-4 col-md-6 col-12" data-aos="fade-up" data-aos-delay="250" data-tilt data-tilt-scale="1.1">
                     <div class="class-thumb">
                         <img src="images/class/crossfit-class.jpg" class="img-fluid" alt="Class">
 
@@ -234,7 +234,7 @@
                     </div>
                 </div>
 
-                <div class="mt-5 mt-lg-0 col-lg-4 col-md-6 col-12" data-aos="fade-up" data-aos-delay="350">
+                <div class="mt-5 mt-lg-0 col-lg-4 col-md-6 col-12" data-aos="fade-up" data-aos-delay="350" data-tilt data-tilt-scale="1.1">
                     <div class="class-thumb">
                         <img src="images/class/cardio-class.jpg" class="img-fluid" alt="Class">
 
